ADD: nodes on LegAnnotation ADD: annotation=nodes on RouteRequest

--- a/.gitignore
+++ b/.gitignore
@@ -155,3 +155,6 @@ $RECYCLE.BIN/
 .DS_Store
 */packages
 /Src/.vs/Osrm.Client
+/.vs/slnx.sqlite
+/.vs/ProjectSettings.json
+/.vs/VSWorkspaceState.json
